sample/retrieveUnpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Segment_Usage_Quartile__c</fullName>
        <label>Segment Usage_Quartile</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Very Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - No Usage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 - Trade Waste</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This will be auto-populated based on the customer&apos;s answers to the questions.</inlineHelpText>
        <label>Segment</label>
        <referenceTo>Segment__c</referenceTo>
        <relationshipLabel>Customers in the Segment</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segmentation_Overdue__c</fullName>
        <formula>IF(Segment_Profile_Next_Review_Date__c &lt;= TODAY() || ISBLANK( Segment_Profile_Next_Review_Date__c ), &apos;Y&apos;, &apos;N&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segmentation Overdue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stakeholder_3rd_Level_Category__c</fullName>
        <label>Stakeholder 3rd Level Category</label>
        <picklist>
            <controllingField>Stakeholder_Sub_Category__c</controllingField>
            <picklistValues>
                <fullName>Early Childhood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stakeholder_Category__c</fullName>
        <inlineHelpText>Go to sidebar link to view category definitions.</inlineHelpText>
        <label>Stakeholder Category</label>
        <picklist>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research &amp; Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stakeholder_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stakeholder Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stakeholder_Sub_Category__c</fullName>
        <label>Stakeholder Sub-Category</label>
        <picklist>
            <controllingField>Stakeholder_Category__c</controllingField>
            <picklistValues>
                <fullName>Federal Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Authorities and Associations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliance partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset and Land Development and Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry Groups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not For Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility and Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Industry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Temp_Mailing_City__c</fullName>
        <label>(Temp) Mailing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Mailing_Country__c</fullName>
        <label>(Temp) Mailing Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Mailing_DPID__c</fullName>
        <label>(Temp) Mailing DPID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Mailing_Postal_Code__c</fullName>
        <label>(Temp) Mailing Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Mailing_State__c</fullName>
        <label>(Temp) Mailing State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Mailing_Street_Address__c</fullName>
        <description>Pour QAS</description>
        <label>(Temp) Mailing Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Temp_Primary_City__c</fullName>
        <label>(Temp) Primary City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Primary_Country__c</fullName>
        <label>(Temp) Primary Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Primary_DPID__c</fullName>
        <label>(Temp) Primary DPID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Primary_Postal_Code__c</fullName>
        <label>(Temp) Primary Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Primary_State__c</fullName>
        <label>(Temp) Primary State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Primary_Street_Address__c</fullName>
        <description>Used by QAS</description>
        <label>(Temp) Primary Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <description>Geographic Territory of the Account  - used by the IOTA group</description>
        <label>Territory</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand - North Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TerritoryIdName</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIC - Eastern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIC - Melbourne CBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIC - Northern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIC - Western</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIC- Southern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Balance__c</fullName>
        <description>Sum of the Balance per Billing Account</description>
        <label>Balance Owing All Accounts</label>
        <summarizedField>Billing_Account__c.Balance__c</summarizedField>
        <summaryForeignKey>Billing_Account__c.Customer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trading_Name__c</fullName>
        <label>Trading Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Twitter_Account__c</fullName>
        <label>Twitter Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Universal_Id__c</fullName>
        <externalId>true</externalId>
        <label>Universal Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>experianqas__Updated_Touchpoints_Timestamp__c</fullName>
        <label>Updated Touchpoints Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>experianqas__Updated_Touchpoints__c</fullName>
        <label>Updated Touchpoints</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Trading_Name__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Is_Key_Customer__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Customers</label>
    </listViews>
    <listViews>
        <fullName>AllAgents</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Trading_Name__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Agent__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Real Estate Agents</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Executives</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Mercantile_Agency</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllKeyCustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Trading_Name__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Is_Key_Customer__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Key_Customer__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Key Customers</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Executives</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Mercantile_Agency</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_NonResidential_Company_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Non_Residential_Company_Customer</value>
        </filters>
        <label>All Non-Residential Company Customers</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Executives</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Mercantile_Agency</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_NonResidential_Individual_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Non_Residential_Individual_Customer</value>
        </filters>
        <label>All Non-Residential Individual Customers</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Executives</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Mercantile_Agency</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Residential_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Residential</value>
        </filters>
        <label>All Residential Customers</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Executives</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Mercantile_Agency</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Stakeholders</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Trading_Name__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PARENT_NAME</columns>
        <columns>Stakeholder_Sub_Category__c</columns>
        <columns>Stakeholder_Category__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Stakeholder__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Stakeholders</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Executives</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Mercantile_Agency</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Dedup</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Universal_Id__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Dedup_Flag__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Dedup</label>
        <sharedTo>
            <group>SEWCAPPS</group>
            <group>SFDC</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Is_Main_Group</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Trading_Name__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Main_Group_Customer__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Is Main Group</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Executives</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Mercantile_Agency</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <namedFilters>
        <fullName>Case_00NO0000000H6PPMA0</fullName>
        <active>true</active>
        <field>Case.Agent__c</field>
        <filterItems>
            <field>Account.Is_Agent__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Case_Agent</name>
    </namedFilters>
    <recordTypes>
        <fullName>IOTA_Customer</fullName>
        <active>true</active>
        <description>Customers that belong to the IOTA Sales group</description>
        <label>IOTA Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>IOTA_Supplier</fullName>
        <active>true</active>
        <description>Record Type for Storing the account of a supplier for the IOTA group</description>
        <label>IOTA Supplier</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Residential_Company_Customer</fullName>
        <active>true</active>
        <description>Non-residential company customers or third parties that have business relationship with SEWL.</description>
        <label>Non-Residential Company Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Residential_Individual_Customer</fullName>
        <active>true</active>
        <description>Non-residential Individual customers.</description>
        <label>Non-Residential Individual Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Residential</fullName>
        <active>true</active>
        <description>Residential customers that have business relationship with SEWL.</description>
        <label>Residential Customer</label>
    </recordTypes>
    <validationRules>
        <fullName>Additonal_Phone_have_to_be_number</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Additional_Phone__c) &amp;&amp; NOT( ISBLANK( Additional_Phone__c ))&amp;&amp;NOT(ISNUMBER( Additional_Phone__c ))</errorConditionFormula>
        <errorDisplayField>Additional_Phone__c</errorDisplayField>
        <errorMessage>Phone has to be numbers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mailing_Address_cannot_be_deleted</fullName>
        <active>true</active>
        <description>Prevents the Customer Mailing Address being deleted if there is a Billing Account address that depends on it. Implemented during SIT as part of Test Track request 526.</description>
        <errorConditionFormula>Billing_Accounts_linked_to_Mailing__c &gt; 0 &amp;&amp; ISBLANK(BillingCity) &amp;&amp; ISBLANK(BillingCountry) &amp;&amp; ISBLANK (BillingState) &amp;&amp; ISBLANK (BillingStreet) &amp;&amp; ISBLANK (BillingPostalCode)</errorConditionFormula>
        <errorDisplayField>BillingStreet</errorDisplayField>
        <errorMessage>The Customer Mailing Address cannot be empty as it is linked with 1 or more Billing Accounts</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mailing_City_Special_Characters</fullName>
        <active>true</active>
        <description>quotes and periods are not allowed in address formats (Billing Address)</description>
        <errorConditionFormula>CONTAINS( BillingCity , &quot;\&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>BillingCity</errorDisplayField>
        <errorMessage>quotes are not allowed in address formats</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mailing_Country_Special_Characters</fullName>
        <active>true</active>
        <description>quotes and periods are not allowed in address formats (Billing Address)</description>
        <errorConditionFormula>CONTAINS( BillingCountry , &quot;\&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>BillingCountry</errorDisplayField>
        <errorMessage>quotes are not allowed in address formats</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mailing_Post_Code_Special_Characters</fullName>
        <active>true</active>
        <description>quotes and periods are not allowed in address formats (Billing Address)</description>
        <errorConditionFormula>CONTAINS( BillingPostalCode , &quot;\&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>BillingPostalCode</errorDisplayField>
        <errorMessage>quotes are not allowed in address formats</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mailing_State_Special_Characters</fullName>
        <active>true</active>
        <description>quotes and periods are not allowed in address formats (Billing Address)</description>
        <errorConditionFormula>CONTAINS( BillingState   , &quot;\&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>BillingState</errorDisplayField>
        <errorMessage>quotes are not allowed in address formats</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mailing_Street_Special_Characters</fullName>
        <active>true</active>
        <description>quotes and periods are not allowed in address formats (Billing Address)</description>
        <errorConditionFormula>CONTAINS(  BillingStreet  , &quot;\&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>BillingStreet</errorDisplayField>
        <errorMessage>quotes are not allowed in address formats</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_have_to_be_number</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Phone) &amp;&amp; NOT( ISBLANK(Phone))&amp;&amp;NOT(ISNUMBER( Phone ))</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Phone has to be numbers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Primary_Address_cannot_be_deleted</fullName>
        <active>true</active>
        <description>Prevents the Customer Primary Address being deleted if there is a Billing Account address that depends on it. Implemented during SIT as part of Test Track request 526</description>
        <errorConditionFormula>Billing_Accounts_linked_to_Primary__c &gt; 0 &amp;&amp; ISBLANK(ShippingCity ) &amp;&amp; ISBLANK(ShippingCountry) &amp;&amp; ISBLANK (ShippingState) &amp;&amp; ISBLANK (ShippingStreet) &amp;&amp; ISBLANK (ShippingPostalCode)</errorConditionFormula>
        <errorDisplayField>ShippingStreet</errorDisplayField>
        <errorMessage>The Customer Primary Address cannot be empty as it is linked with 1 or more Billing Accounts</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Primary_City_Special_Characters</fullName>
        <active>true</active>
        <description>quotes and periods are not allowed in address formats (Shipping Address)</description>
        <errorConditionFormula>CONTAINS( ShippingCity , &quot;\&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>ShippingCity</errorDisplayField>
        <errorMessage>quotes are not allowed in address formats</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Primary_Country_Special_Characters</fullName>
        <active>true</active>
        <description>quotes and periods are not allowed in address formats (Shipping Address)</description>
        <errorConditionFormula>CONTAINS( ShippingCountry , &quot;\&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>ShippingCountry</errorDisplayField>
        <errorMessage>quotes are not allowed in address formats</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Primary_Post_Code_Special_Characters</fullName>
        <active>true</active>
        <description>quotes and periods are not allowed in address formats (Shipping Address)</description>
        <errorConditionFormula>CONTAINS( ShippingPostalCode , &quot;\&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>ShippingPostalCode</errorDisplayField>
        <errorMessage>quotes are not allowed in address formats</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Primary_State_Special_Characters</fullName>
        <active>true</active>
        <description>quotes and periods are not allowed in address formats (Shipping Address)</description>
        <errorConditionFormula>CONTAINS( ShippingState , &quot;\&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>ShippingState</errorDisplayField>
        <errorMessage>quotes are not allowed in address formats</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Primary_Street_Special_Characters</fullName>
        <active>true</active>
        <description>quotes and periods are not allowed in address formats (Shipping Address)</description>
        <errorConditionFormula>CONTAINS( ShippingStreet , &quot;\&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>ShippingStreet</errorDisplayField>
        <errorMessage>quotes are not allowed in address formats</errorMessage>
    </validationRules>
</CustomObject>